Fix spacing

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -19,9 +19,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 2rem 0;
 }
 @media screen and (min-width: 900px) {
   .comet {
+    padding: 4rem;
     min-height: auto;
   }
 }
